created a example enviroment file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # ---------- FLASK CONFIG ----------
-FASTAPI_URL=http://127.0.0.1:8000
-FLASK_SECRET_KEY=CHANGE_THIS_SECRET
+FASTAPI_URL=http://127.0.0.1:9127
+FLASK_SECRET_KEY=potato
 DEBUG=true
 
 # ---------- FASTAPI CONFIG ----------
